<?xml version="1.0"?>
<package format="2">
  <name>manda_coverage</name>
  <version>0.0.0</version>
  <description>The manda_coverage package</description>

  <author>Damien Manada</author>
  
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>project11_transformations</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geographic_visualization_msgs</depend>
  <depend>marine_msgs</depend>
  <depend>path_follower</depend>

  <export>
  </export>
</package>
